adding axios ,api 404 page ,checkout page

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_KEY="acc6b2e010e44cbbbe25da38a2b8f37e"
-REACT_APP_API_URL="http://localhost:8080"
+REACT_APP_API_URL="http://localhost:8080/ministore"
