--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.5",
         "antd": "^5.4.7",
         "axios": "^1.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
         "react-jwt": "^1.1.8",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.11.1",
         "react-toastify": "^9.1.2",
+        "react-tooltip": "^5.13.1",
+        "redux": "^4.2.1",
+        "remixicon-react": "^1.0.0",
         "styled-components": "6.0.0-rc.1"
     },
     "devDependencies": {
