--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dependencies": {
         "antd": "^5.4.7",
         "axios": "^1.4.0",
+        "cdbreact": "^1.5.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.9.0",
         "react-jwt": "^1.1.8",
         "react-router-dom": "^6.11.1",
         "react-toastify": "^9.1.2",
