--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
         "@reduxjs/toolkit": "^1.9.5",
         "antd": "^5.4.7",
         "axios": "^1.4.0",
+        "exceljs": "^4.3.0",
+        "file-saver": "^2.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-highlight-words": "^0.20.0",
         "react-icons": "^4.8.0",
         "react-jwt": "^1.1.8",
         "react-redux": "^8.0.5",
