--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "react-tooltip": "^5.13.1",
         "redux": "^4.2.1",
         "remixicon-react": "^1.0.0",
-        "styled-components": "^6.0.0-rc.1"
+        "styled-components": "^6.0.0-rc.1",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
