--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "react": "^18.2.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.2.0",
         "react-highlight-words": "^0.20.0",
         "react-icons": "^4.8.0",
@@ -29,6 +30,7 @@
         "redux": "^4.2.1",
         "remixicon-react": "^1.0.0",
         "styled-components": "^6.0.0-rc.1",
+        "uuid": "^9.0.0",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
