--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-beautiful-dnd": "^13.1.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-highlight-words": "^0.20.0",
         "react-icons": "^4.8.0",
         "react-jwt": "^1.1.8",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.11.1",
+        "react-slick": "^0.29.0",
         "react-toastify": "^9.1.2",
         "react-tooltip": "^5.13.1",
+        "recharts": "^2.7.1",
         "redux": "^4.2.1",
         "remixicon-react": "^1.0.0",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^6.0.0-rc.1",
         "uuid": "^9.0.0",
         "xlsx": "^0.18.5"
