--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.11.1",
         "react-slick": "^0.29.0",
+        "react-to-print": "^2.14.13",
         "react-toastify": "^9.1.2",
         "react-tooltip": "^5.13.1",
         "recharts": "^2.7.1",
