--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.4.0",
         "cdbreact": "^1.5.16",
         "chart.js": "^4.3.0",
+        "date-fns": "^2.30.0",
         "daypilot-pro-react": "^0.0.0",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
