--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "daypilot-pro-react": "^0.0.0",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
+        "html5-qrcode": "^2.3.8",
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-animated-numbers": "^0.16.0",
